k8s/service-mesh/istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ts-commons-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: ts-commons-tls
      hosts:
        - ts-commons.example.com
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - ts-commons.example.com
      tls:
        httpsRedirect: true
